<resources>
    <string name="app_name">Ridery</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Map</string>
    <string name="swipe">Swipe</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="register_error">El Usuario ya existe</string>
    <string name="register_message">Regístrate</string>
    <string name="email_required">Email requerido</string>
    <string name="password_required">Password Requerido</string>
    <string name="name_required">Nombre Requerido</string>
    <string name="last_name_required">Apellido Requerido</string>
    <string name="invalid_email">Email invalido</string>
    <string name="invalid_user">Usuario inválido</string>
    <string name="duplicate_user">El usuario ya existe ingrese otro email</string>
    <string name="save">Guardar</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="update_successful">Usuario actualizado con exito</string>
    <string name="save_successful">Usuario creado con exito</string>
    <string name="alert">Alerta</string>
    <string name="ok">OK</string>
    <string name="map_updated">Mapa Actualizado</string>
    <string name="api_success">Respuesta de API exitosa</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>